debugging and improvements in GUI, architecture and QA